--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -86,8 +86,8 @@ section h3 {
 }
 
 .participants-list {
-  list-style-type: disc;
-  padding-left: 25px;
+  list-style-type: none;
+  padding-left: 0;
   margin: 0;
 }
 
@@ -95,6 +95,19 @@ section h3 {
   padding: 4px 0;
   color: #555;
   font-size: 14px;
+  display: flex;
+  align-items: center;
+}
+
+.delete-participant {
+  cursor: pointer;
+  margin-left: 10px;
+  color: #c00;
+  font-size: 18px;
+  transition: color 0.2s;
+}
+.delete-participant:hover {
+  color: #900;
 }
 
 .no-participants {
